--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -25,4 +25,24 @@
             android:id="@+id/action_SecondFragment_to_FirstFragment"
             app:destination="@id/FirstFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/First3Fragment"
+        android:name="com.example.noteit.First3Fragment"
+        android:label="@string/first_fragment_label"
+        tools:layout="@layout/fragment_first3">
+
+        <action
+            android:id="@+id/action_First3Fragment_to_Second3Fragment"
+            app:destination="@id/Second3Fragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/Second3Fragment"
+        android:name="com.example.noteit.Second3Fragment"
+        android:label="@string/second_fragment_label"
+        tools:layout="@layout/fragment_second3">
+
+        <action
+            android:id="@+id/action_Second3Fragment_to_First3Fragment"
+            app:destination="@id/First3Fragment" />
+    </fragment>
 </navigation>
