--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,6 @@
     <color name="blue">#8C9EFF</color>
     <color name="greenlight">#96D162</color>
     <color name="notgreen">#EA80FC</color>
+
+    <color name="black_overlay">#66000000</color>
 </resources>
