--- a/app/src/main/res/layout/activity_add_note.xml
+++ b/app/src/main/res/layout/activity_add_note.xml
@@ -42,6 +42,6 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         app:maxImageSize="30dp"
-        app:srcCompat="@drawable/add" />
+        app:srcCompat="@drawable/ic_baseline_save_24" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
