--- a/app/src/main/res/layout/activity_edit_note.xml
+++ b/app/src/main/res/layout/activity_edit_note.xml
@@ -64,7 +64,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.976"
         app:maxImageSize="30dp"
-        app:srcCompat="@drawable/save" />
+        app:srcCompat="@drawable/ic_baseline_save_24" />
 
     <ProgressBar
         android:id="@+id/progressBar2"
