--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -66,15 +66,21 @@
 
         <TextView
             android:id="@+id/userDissplayName"
-            android:layout_width="359dp"
-            android:layout_height="28dp"
-            android:text="    Name"
-            android:textSize="18sp"
+            android:layout_width="356dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="23dp"
+            android:layout_marginTop="28dp"
+            android:layout_marginEnd="32dp"
+            android:layout_marginBottom="12dp"
+            android:text="Name"
+            android:textSize="18dp"
             app:layout_constraintBottom_toTopOf="@+id/userDisplayEmail"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView2"
-            app:layout_constraintVertical_bias="0.619" />
+            app:layout_constraintVertical_bias="0.0" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
